feat(service): route GC logs to stderr with utctime
Change -Xlog output from stdout to stderr so each stream carries a
single format: ECS JSON on stdout, plain-text GC lines on stderr.
A log collector can then route by stream without inferring format
from line content.

Replace the time decorator with utctime for timezone-independent
timestamps that correlate cleanly with application logs and Prometheus
metrics.

Update docs/runtime-safety.md, docs/observability.md, and ADR 0014
to document the rationale.